# container_service

./: Dockerfile  Dockerfile_base  README.md  cloudbuild.yml  makefile  pyproject.toml
src/container_service/: __init__.py  endpoints.py  helpers.py  udf_executor.py
tests/: README.md  conftest.py  env_builder.py  test_container_service.py
