[tool.poetry]
name = "container_service"
version = "0.8.4"
description = ""
authors = ["Jacob Zuliani <jake@burla.dev>"]
packages = [{include = "container_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
gunicorn = "^20.1.0"
google-cloud-firestore = "^2.11.1"
google-api-python-client = "^2.97.0"
google-cloud-storage = "^2.10.0"
cloudpickle = "^2.2.1"
tblib = "^3.0.0"
google-cloud-logging = "^3.8.0"
google-cloud-secret-manager = "^2.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
